Now, if you filter all your partitions out, you will get a note to that effect

--- a/priv/admin/style.css
+++ b/priv/admin/style.css
@@ -594,6 +594,10 @@ input.gui-point-button:active, input.gui-rect-button:active {padding-bottom: 9px
     font-color:#000;
 }
 
+#no-matches td {
+    padding-top: 12px;
+}
+
 
 /* END CODE FOR RING CONTENT*/
 
