--- a/priv/admin/style.css
+++ b/priv/admin/style.css
@@ -363,31 +363,38 @@ input.gui-point-button, input.gui-rect-button {padding-bottom: 12px;}
 input.gui-point-button:active, input.gui-rect-button:active {padding-bottom: 9px;}
 
 .button-column {width: 150px;}
-
-.leave-cluster-box {
-    padding: 6px 0 5px 15px;
-    border-left: 1px solid #2f2f2f;
-}
 /* END CODE FOR POINT BUTTONS */
 
 /* CODE FOR SHUTDOWN BUTTON */
-.shutdown-box {
+.shutdown-box, .leave-cluster-box, .markdown-box {
     height: 53px;
     padding-right: 20px;
     border-right: 1px solid #000;
 }
-.shutdown-label {
+.leave-cluster-box, .markdown-box {
+    padding-left: 15px;
+    border-left: 1px solid #333;
+}
+.markdown-box {
+    border-right: none;
+}
+.shutdown-label, .leave-cluster-label, .markdown-label {
     padding: 18px 0 0 10px;
 }
-.shutdown-button {
+.shutdown-button, .leave-cluster-button, .markdown-button {
     display: block;
     width: 51px;
     height: 53px;
     cursor: pointer;
-    background: url(/admin/ui/images/powerbutton-sprite.png) left top no-repeat transparent;
 }
-.shutdown-button:active {background-position: left -53px;}
-.shutdown-button.pressed {background-position: left -106px;}
+.shutdown-button {background: url(/admin/ui/images/powerbutton-sprite.png) left top no-repeat transparent;}
+.leave-cluster-button {background: url(/admin/ui/images/leavecluster-sprite.png) left top no-repeat transparent;}
+.markdown-button {background: url(/admin/ui/images/markdown-sprite.png) left top no-repeat transparent;}
+.shutdown-button:active, .leave-cluster-button:active, .markdown-button:active   {background-position: left -53px;}
+.shutdown-button.pressed, .leave-cluster-button.pressed, .markdown-button.pressed {
+    background-position: left -106px;
+    cursor: default;
+}
 /* END CODE FOR SHUTDOWN BUTTON*/
 
 /* CODE FOR LIGHTS */
@@ -506,7 +513,7 @@ input.gui-point-button:active, input.gui-rect-button:active {padding-bottom: 9px
     font-size: 15px;
 }
 
-.statistics, .markdown, .more-actions-slider-box {
+.statistics, .more-actions-slider-box {
     width: 137px;
 }
 
@@ -537,13 +544,13 @@ input.gui-point-button:active, input.gui-rect-button:active {padding-bottom: 9px
 }
 
 #cluster-table .more-node-actions td {
-    padding: 0 15px 0 2px;
+    padding: 0;
     height: 0;
     line-height: 0;
 }
 
 .actions-pointer {
-    background: url(/admin/ui/images/area-pointer.png) center top no-repeat transparent;
+    background: url(/admin/ui/images/area-pointer.png) 50px top no-repeat transparent;
     height: 9px;
     line-height: 1;
 }
@@ -551,8 +558,9 @@ input.gui-point-button:active, input.gui-rect-button:active {padding-bottom: 9px
 .actions-box {
     line-height: 1;
     background: #242424;
-    padding: 15px 15px 12px;
-    margin-bottom: 36px;
+    padding: 15px 15px 10px;
+    margin-bottom: 15px;
+    float: left;
     border-bottom: 1px solid #3f3f3f;
     border-bottom: 1px solid rgba(255, 255, 255, .15);
     -webkit-box-shadow: inset 0 3px 10px #0f0f0f;
