--- a/priv/admin/style.css
+++ b/priv/admin/style.css
@@ -495,7 +495,7 @@ input.gui-point-button:active, input.gui-rect-button:active {padding-bottom: 9px
 }
 
 #cluster-table .node td {
-    padding: 2px;
+    padding: 2px 15px 2px 0;
     height: 52px;
 }
 
@@ -508,7 +508,24 @@ input.gui-point-button:active, input.gui-rect-button:active {padding-bottom: 9px
     width: 90px;
 }
 
-.name {
+#cluster-table .node td.ring_pct-box,
+#cluster-table .node td.pending_pct-box {
+    width: 100px;
+}
+#cluster-table .node td.ring_pct-box {
+    padding-right: 0;
+}
+#cluster-table .node td.pending_pct-box {
+    padding-right: 6px;
+}
+
+#cluster-table .node td.pct-light-box {
+    width: 25px;
+    padding-right: 0;
+    padding-left: 3px;
+}
+
+.name, .ring_pct, .pending_pct {
     padding: 8px 2px;
     height: 22px;
 }
@@ -554,14 +571,15 @@ input.gui-point-button:active, input.gui-rect-button:active {padding-bottom: 9px
 }
 
 .actions-pointer {
-    background: url(/admin/ui/images/area-pointer.png) 50px top no-repeat transparent;
+    background: url(/admin/ui/images/area-pointer.png) 36px top no-repeat transparent;
     height: 9px;
     line-height: 1;
 }
 
 .actions-box {
     line-height: 1;
-    background: #242424;
+    background: #111;
+    background: rgba(36, 36, 36, 1);
     padding: 15px 15px 10px;
     margin-bottom: 15px;
     float: left;
@@ -569,6 +587,11 @@ input.gui-point-button:active, input.gui-rect-button:active {padding-bottom: 9px
     border-bottom: 1px solid rgba(255, 255, 255, .15);
     -webkit-box-shadow: inset 0 3px 10px #0f0f0f;
     -webkit-border-radius: 4px;
+    -moz-box-shadow: inset 0 3px 10px #0f0f0f;
+    -moz-border-radius: 4px;
+    box-shadow: inset 0 3px 10px #0f0f0f;
+    border-radius: 4px;
+
 }
 
 .leave-cluster {
@@ -576,6 +599,10 @@ input.gui-point-button:active, input.gui-rect-button:active {padding-bottom: 9px
 }
 .leave-cluster:hover {
     text-decoration: underline;
+}
+
+.pct-light {
+    height: 24px;
 }
 
 /* END CODE FOR CLUSTER CONTENT */
