We now have the ability to fire events internally within the GUI if we need to.  Also, we have a basic working prototype of the snapshot page.

--- a/priv/admin/style.css
+++ b/priv/admin/style.css
@@ -510,12 +510,23 @@ ul.bulleted li {
 #healthy-cluster {
     text-align: left;
     background: url(/admin/ui/images/healthy-cluster.png) left top no-repeat transparent;
-    padding: 100px 0 175px 343px;
+    padding: 45px 0 175px 343px;
 }
 #unhealthy-cluster {
     text-align: left;
     background: url(/admin/ui/images/unhealthy-cluster.png) left top no-repeat transparent;
-    padding: 75px 0 200px 343px;
+    padding: 45px 0 200px 343px;
+}
+
+#unreachable-nodes-list, #down-nodes-list {
+    margin-bottom: 25px;
+}
+
+.go-to-cluster {
+    cursor: pointer;
+}
+.go-to-cluster:hover {
+    text-decoration: underline;
 }
 /* END CODE FOR SNAPSHOT CONTENT*/
 
