--- a/priv/admin/style.css
+++ b/priv/admin/style.css
@@ -561,7 +561,8 @@ ul.bulleted li {
 }
 
 #cluster-table .node td.memory-box {
-    width: 125px;
+    width: 185px;
+    padding-right: 0;
 }
 
 
@@ -684,6 +685,11 @@ ul.bulleted li {
 }
 .erlang-mem {background: #0da5e4;}
 .non-erlang-mem {background: #4bc534;}
+.free-memory {
+    display: block;
+    padding-top: 8px;
+    padding-left: 5px;
+}
 
 /* END CODE FOR CLUSTER CONTENT */
 
