Fixed a bug where the next button would not disable if there was only one page

--- a/priv/admin/style.css
+++ b/priv/admin/style.css
@@ -756,6 +756,10 @@ ul.bulleted li {
     -moz-border-radius: 4px;
     border-radius: 4px;
 }
+.pagination li.dots {
+    background: none;
+    border: 0;
+}
 
 .paginator {
     display: block;
