The pagination should now be completely working with a maximum number of pages showing at a time

--- a/priv/admin/style.css
+++ b/priv/admin/style.css
@@ -759,6 +759,8 @@ ul.bulleted li {
 .pagination li.dots {
     background: none;
     border: 0;
+    letter-spacing: 1px;
+    padding: 2px 4px;
 }
 
 .paginator {
