--- a/priv/admin/style.css
+++ b/priv/admin/style.css
@@ -84,18 +84,22 @@ h2 {
 }
 
 h3 {
-    font-size: 22px;
+    font-size: 24px;
     display: block;
     padding-bottom: 8px;
+    letter-spacing: 1px;
 }
 h3.no-pad {
     padding: 0;
 }
 
 h4 {
-    font-size: 20px;
+    font-size: 19px;
     padding-bottom: 0px;
     letter-spacing: 1px;
+}
+h4.pad-bottom {
+    padding-bottom: 7px;
 }
 
 
@@ -287,10 +291,16 @@ h4 {
 }
 
 /* CODE FOR DROPDOWNS */
+
 .gui-dropdown-wrapper {
     height: 30px;
     background: url(/admin/ui/images/dropdown-left.png) left top no-repeat transparent;
     position: relative;
+    max-width: 250px;
+}
+.gui-dropdown-wrapper.long {
+    max-width: 1000px;
+    width: 292px;
 }
 .gui-dropdown-bg {
     padding-top: 8px;
@@ -384,6 +394,35 @@ h4 {
     font-family: menlo, monospace;
 }
 /* END CODE FOR TEXT FIELDS */
+
+/* CODE FOR TEXTAREAS */
+.gui-textarea-wrapper {
+    padding: 10px;
+    background: rgba(0, 0, 0, .38);
+    border-bottom: 1px solid rgba(255, 255, 255, .18);
+    -webkit-box-shadow: inset 0 2px 1px #1f1f1f;
+    -moz-box-shadow: inset 0 2px 1px #1f1f1f;
+    box-shadow: inset 0 2px 1px #1f1f1f;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+}
+.gui-textarea-padder {
+
+}
+.gui-textarea {
+    width: 100%;
+    min-height: 155px;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    background: transparent;
+    font-family: menlo, monospace;
+}
+.gui-textarea, .gui-textarea:focus {
+    outline: none;
+}
+/* END CODE FOR TEXTAREAS */
 
 /* CODE FOR POINT BUTTONS */
 .gui-point-button, .gui-rect-button {
@@ -907,28 +946,124 @@ ul.bulleted li {
 /* END CODE FOR RING CONTENT*/
 
 
+/* CODE FOR MAPREDUCE PAGE */
+
+.phase-status {
+    width: 195px;
+    padding-left: 5px;
+}
+
+.phase-type {
+    width: 100px;
+    padding-right: 15px;
+}
+
+.phase-language {
+    padding-right: 15px;
+}
+
+.phase-edit {
+    width: 137px;
+    padding-right: 15px;
+}
+
+.phase-delete {
+    width: 20px;
+    padding-right: 10px;
+}
+
+.remove-phase {
+    background: url(/admin/ui/images/close-error.png) left top no-repeat transparent;
+    padding: 0 10px;
+    opacity: .4;
+    filter: alpha(opacity=40);
+    cursor: pointer;
+}
+.remove-phase:hover, .remove-phase.red, .highlight .remove-phase {
+    background-position: left -98px;
+    filter: none;
+    opacity: 1;
+}
+
+#mapreduce-table .query:hover, #mapreduce-table .query.highlight, .query-specifics.highlight {
+    background: url(/admin/ui/images/node-bg.png) left top repeat transparent;
+    background: rgba(255,255,255,.1);
+}
+
+.query .gui-dropdown-wrapper {
+    display: none;
+}
+.query.highlight .gui-dropdown-wrapper {
+    display: block;
+}
+.query.highlight .gui-field {
+    display: none;
+}
+
+.add-phase {
+    background: url(/admin/ui/images/add-phase.png) left top no-repeat transparent;
+    padding: 5px 0 0 26px;
+    margin-left: 7px;
+    cursor: pointer;
+}
+.add-phase:hover {
+    color: #fff;
+}
+
+.query-specifics {
+    display: none;
+}
+
+.query-content {
+    display: none;
+    padding: 15px 10px 5px;
+}
+
+.stored-funcs {
+    width: 175px;
+    padding-right: 15px;
+}
+
+.inputs {
+    padding-top: 15px;
+}
+
+.inputs-table {
+    width: 100%;
+}
+
+.run-query {
+    width: 137px;
+    padding-left: 15px;
+}
+
+/* END CODE FOR MAPREDUCE */
 
 
 
 /* CASCADING STYLES */
-.left      {float: left;}
-.right     {float: right;}
-.clear     {clear: both;}
-.clearl    {clear: left;}
-.clearr    {clear: right;}
-.block     {display: block;}
-.i-block   {display: inline-block;}
-.inline    {display: inline;}
-.inblock   {display: inline-block;}
-.cut       {height: 2px; background: url(/admin/ui/images/cut-bg.png) left bottom repeat-x transparent;}
-.has-cut   {background: url(/admin/ui/images/cut-bg.png) left bottom repeat-x transparent;}
-.hide      {display: none;}
-.monospace {font-family: menlo, monospace;}
-.bold      {font-weight: bold;}
-.emphasize {font-size: 110%;}
-.smaller   {font-size: 90%;}
-.relative  {position: relative;}
-.gray-text {color: #666;}
+.left        {float: left;}
+.right       {float: right;}
+.clear       {clear: both;}
+.clearl      {clear: left;}
+.clearr      {clear: right;}
+.block       {display: block;}
+.i-block     {display: inline-block;}
+.inline      {display: inline;}
+.inblock     {display: inline-block;}
+.cut         {height: 2px; background: url(/admin/ui/images/cut-bg.png) left bottom repeat-x transparent;}
+.has-cut     {background: url(/admin/ui/images/cut-bg.png) left bottom repeat-x transparent;}
+.hide        {display: none;}
+.monospace   {font-family: menlo, monospace;}
+.bold        {font-weight: bold;}
+.emphasize   {font-size: 110%;}
+.smaller     {font-size: 90%;}
+.relative    {position: relative;}
+.gray-text   {color: #666;}
+.pad-bottom  {padding-bottom: 12px;}
+.nudge-bottom{margin-bottom: 12px;}
+.push-bottom {margin-bottom: 25px;}
+.full-width  {width: 100%;}
 
 .vertical-padding-small {padding: 10px 0;}
 
