Add new templates, convert from PJAX.

--- a/priv/admin/js/templates/snapshot.hbs
+++ b/priv/admin/js/templates/snapshot.hbs
@@ -6,7 +6,7 @@
         <ul class="gui-text bulleted">
             <li><span class="emphasize monospace">0</span> Unreachable nodes</li>
             <li><span class="emphasize monospace">0</span> Incompatible nodes</li>
-            <li><span class="emphasize monospace">0</span> Nodes marked as 'down'</li>
+            <li><span class="emphasize monospace">0</span> Nodes marked as down</li>
             <li><span class="emphasize monospace">0</span> Nodes experiencing low memory</li>
             <li>Nothing to worry about because Riak is your friend</li>
         </ul>
@@ -24,7 +24,7 @@
         <ul id="incompatible-nodes-list" class="gui-text bulleted hide monospace"></ul>
 
         <!-- Down Nodes List -->
-        <h3 id="down-nodes-title" class="gui-headline vertical-padding-small hide">The following nodes are currently marked as 'down':</h3>
+        <h3 id="down-nodes-title" class="gui-headline vertical-padding-small hide">The following nodes are currently marked down:</h3>
         <ul id="down-nodes-list" class="gui-text bulleted hide monospace"></ul>
 
         <!-- Low-Mem Nodes List -->
@@ -33,3 +33,8 @@
 
     </div>
 </div>
+
+<script id="#snapshot-script" src="/admin/ui/js/snapshot.js"></script>
+<script type="text/javascript">
+  alert("hi");
+</script>
