--- a/priv/admin/js/templates/mapreduce.hbs
+++ b/priv/admin/js/templates/mapreduce.hbs
@@ -1,3 +1,5 @@
+<h1 id="mapreduce-headline" class="gui-headline-bold">MapReduce</h1>
+
 <h2 class="gui-headline-bold has-cut">Query Phases</h2>
 <div id="node-list" class="pad-bottom has-cut">
 
