--- a/priv/admin/js/templates/snapshot.hbs
+++ b/priv/admin/js/templates/snapshot.hbs
@@ -1,6 +1,7 @@
 <h1 id="snapshot-headline" class="gui-headline-bold">Current Snapshot...</h1>
 <div class="relative">
-    <div id="healthy-cluster" class="hide">
+  {{#if healthyCluster}}
+    <div id="healthy-cluster">
         <h2 class="gui-headline-bold has-cut">Your cluster is healthy.</h2>
         <h3 class="gui-headline vertical-padding-small">You currently have...</h3>
         <ul class="gui-text bulleted">
@@ -11,30 +12,49 @@
             <li>Nothing to worry about because Riak is your friend</li>
         </ul>
     </div>
-
-    <div id="unhealthy-cluster" class="hide">
+  {{else}}
+    <div id="unhealthy-cluster">
         <h2 class="gui-headline-bold has-cut">Your cluster has problems.</h2>
 
-        <!-- Unreachable Nodes List -->
-        <h3 id="unreachable-nodes-title" class="gui-headline vertical-padding-small hide">The following nodes are currently unreachable:</h3>
-        <ul id="unreachable-nodes-list" class="gui-text bulleted hide monospace"></ul>
+        {{#if areUnreachableNodes}}
+          <!-- Unreachable Nodes List -->
+          <h3 id="unreachable-nodes-title" class="gui-headline vertical-padding-small">The following nodes are currently unreachable:</h3>
+          <ul id="unreachable-nodes-list" class="gui-text bulleted monospace">
+            {{#each unreachableNodes}}
+              <li><a class="go-to-cluster" {{action showCluster href=true}}>{{this}}</a></li>
+            {{/each}}
+          </ul>
+        {{/if}}
 
-        <!-- Incompatible Nodes List -->
-        <h3 id="incompatible-nodes-title" class="gui-headline vertical-padding-small hide">The following nodes are currently incompatible with Riak Control:</h3>
-        <ul id="incompatible-nodes-list" class="gui-text bulleted hide monospace"></ul>
+        {{#if areIncompatibleNodes}}
+          <!-- Incompatible Nodes List -->
+          <h3 id="incompatible-nodes-title" class="gui-headline vertical-padding-small">The following nodes are currently incompatible with Riak Control:</h3>
+          <ul id="incompatible-nodes-list" class="gui-text bulleted monospace">
+            {{#each incompatibleNodes}}
+              <li><a class="go-to-cluster" {{action showCluster href=true}}>{{this}}</a></li>
+            {{/each}}
+          </ul>
+        {{/if}}
 
-        <!-- Down Nodes List -->
-        <h3 id="down-nodes-title" class="gui-headline vertical-padding-small hide">The following nodes are currently marked down:</h3>
-        <ul id="down-nodes-list" class="gui-text bulleted hide monospace"></ul>
+        {{#if areDownNodes}}
+          <!-- Down Nodes List -->
+          <h3 id="down-nodes-title" class="gui-headline vertical-padding-small">The following nodes are currently marked down:</h3>
+          <ul id="down-nodes-list" class="gui-text bulleted monospace">
+            {{#each downNodes}}
+              <li><a class="go-to-cluster" {{action showCluster href=true}}>{{this}}</a></li>
+            {{/each}}
+          </ul>
+        {{/if}}
 
-        <!-- Low-Mem Nodes List -->
-        <h3 id="low_mem-nodes-title" class="gui-headline vertical-padding-small hide">The following nodes are currently experiencing low memory:</h3>
-        <ul id="low_mem-nodes-list" class="gui-text bulleted hide monospace"></ul>
-
+        {{#if areLowMemNodes}}
+          <!-- Low-Mem Nodes List -->
+          <h3 id="low_mem-nodes-title" class="gui-headline vertical-padding-small">The following nodes are currently experiencing low memory:</h3>
+          <ul id="low_mem-nodes-list" class="gui-text bulleted monospace">
+            {{#each lowMemNodes}}
+              <li><a class="go-to-cluster" {{action showCluster href=true}}>{{this}}</a></li>
+            {{/each}}
+          </ul>
+        {{/if}}
     </div>
+  {{/if}}
 </div>
-
-<script id="#snapshot-script" src="/admin/ui/js/snapshot.js"></script>
-<script type="text/javascript">
-  alert("hi");
-</script>
