--- a/priv/admin/style.css
+++ b/priv/admin/style.css
@@ -67,7 +67,8 @@ body {
     padding: 8px 0 0 0;
 }
 
-a {text-decoration: none;}
+a { text-decoration: none; }
+a:visited { color: #DFDFDF; }
 
 h1 {
     font-size: 48px;
