Whitespace change and more map/red removal.

--- a/priv/admin/js/templates/application.hbs
+++ b/priv/admin/js/templates/application.hbs
@@ -13,7 +13,7 @@
                         <li id="nav-cluster" class="nav-li"><a {{action showCluster href=true}} class="gui-text-bold nav-item">Cluster</a></li>
                         <li id="nav-ring" class="nav-li"><a {{action showRing href=true}} class="gui-text-bold nav-item">Ring</a></li>
                         <li id="nav-objects" class="nav-li-disabled"><a class="gui-text-bold nav-item">Objects</a></li>
-                        <li id="nav-mapreduce" class="nav-li-disabled"><a {{action showMapReduce href=true}} class="gui-text-bold nav-item">MapReduce</a></li>
+                        <li id="nav-mapreduce" class="nav-li-disabled"><a class="gui-text-bold nav-item">MapReduce</a></li>
                         <li id="nav-graphs" class="nav-li-disabled"><a class="gui-text-bold nav-item">Graphs</a></li>
                         <li id="nav-logs" class="nav-li-disabled"><a class="gui-text-bold nav-item">Logs</a></li>
                         <li id="nav-support" class="nav-li-disabled"><a class="gui-text-bold nav-item">Support</a></li>
