some more stylus additions

--- a/priv/admin/css/general.styl
+++ b/priv/admin/css/general.styl
@@ -4,7 +4,7 @@ Styles to be applied generally across the UI
 */
 
 /* Variables */
-darkened  = rgb(0, 0, 0, .3)
+darkened  = rgba(0, 0, 0, .3)
 darkGray  = #2d2d2d
 lightGray = #dfdfdf
 
@@ -135,7 +135,7 @@ h3
 
 #active-nav
   absoluteLeft(0, 0)
-  dimensions(14px, 18px)
+  dimensions(14px, 180px)
   background: url('/admin/ui/images/active-nav.png') left top no-repeat transparent
 
 .nav-li
