--- a/priv/admin/css/compiled/general.css
+++ b/priv/admin/css/compiled/general.css
@@ -1,147 +1,13 @@
 /* 
-Main Stylus CSS File
-Imports and arranges all other stylus files.
+Styles to be applied generally across the UI
 */
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-body {
-  line-height: 1;
-}
-ol,
-ul {
-  list-style: none;
-}
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: '';
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-td {
-  vertical-align: top;
-}
-@font-face {
-  font-family: 'rokkitt';
-  src: url("/admin/ui/fonts/rokkitt.eot");
-  src: url("/admin/ui/fonts/rokkitt.eot?#iefix") format('embedded-opentype'), url("/admin/ui/fonts/rokkitt.woff") format('woff'), url("/admin/ui/fonts/rokkitt.ttf") format('truetype'), url("/admin/ui/fonts/rokkitt.svg#rokkitt") format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'rokkitt';
-  src: url("/admin/ui/fonts/rokkitt-bold.eot");
-  src: url("/admin/ui/fonts/rokkitt-bold.eot?#iefix") format('embedded-opentype'), url("/admin/ui/fonts/rokkitt-bold.woff") format('woff'), url("/admin/ui/fonts/rokkitt-bold.ttf") format('truetype'), url("/admin/ui/fonts/rokkitt-bold.svg#rokkittbold") format('svg');
-  font-weight: bold;
-  font-style: normal;
-}
+/* Variables */
+/* End Variables */
+/* Functions */
+/* End Functions */
+/* Extensible Classes */
+/* End Extensible Classes */
+/* Tags */
 html {
   background: url("/admin/ui/images/gui-bg.jpg") left top repeat #2d2d2d;
 }
@@ -174,6 +40,8 @@ h3 {
   letter-spacing: 8px;
   padding-bottom: 1px;
 }
+/* End Tags */
+/* IDs & Classes */
 #header {
   width: auto;
   height: 67px;
@@ -299,3 +167,4 @@ h3 {
   background: transparent;
   padding: 5px 14px 0 25px;
 }
+/* Ende IDs & Classes */
