--- a/priv/admin/js/templates/ring.hbs
+++ b/priv/admin/js/templates/ring.hbs
@@ -19,7 +19,7 @@
                 <td><h3 class="gui-headline">Search</h3></td>
             </tr>
         </thead>
-        {{#collection RiakControl.PartitionView contentBinding="this"}}
+        {{#collection RiakControl.PartitionView contentBinding="controller.filteredContent"}}
           {{#with view.content}}
           <td class="partition-number gui-text">{{i}}</td>
           <td class="owner-box gui-text">
