--- a/priv/admin/js/templates/application.hbs
+++ b/priv/admin/js/templates/application.hbs
@@ -4,28 +4,24 @@
 </div>
 
 <div id="wrapper" class="split gui-text">
-    <table>
-        <tr>
-            <td id="nav-box">
-                <div id="navigation">
-                    <ul id="nav-ul">
-                        <li id="nav-snapshot" class="nav-li"><a {{action showSnapshot href=true}} class="gui-text-bold nav-item">Snapshot</a></li>
-                        <li id="nav-cluster" class="nav-li"><a {{action showCluster href=true}} class="gui-text-bold nav-item">Cluster</a></li>
-                        <li id="nav-ring" class="nav-li"><a {{action showRing href=true}} class="gui-text-bold nav-item">Ring</a></li>
-                        <li id="nav-objects" class="nav-li-disabled"><a class="gui-text-bold nav-item">Objects</a></li>
-                        <li id="nav-mapreduce" class="nav-li-disabled"><a class="gui-text-bold nav-item">MapReduce</a></li>
-                        <li id="nav-graphs" class="nav-li-disabled"><a class="gui-text-bold nav-item">Graphs</a></li>
-                        <li id="nav-logs" class="nav-li-disabled"><a class="gui-text-bold nav-item">Logs</a></li>
-                        <li id="nav-support" class="nav-li-disabled"><a class="gui-text-bold nav-item">Support</a></li>
-                    </ul>
-                    <div id="active-nav"></div>
-                </div>
-                <div id="split-bar"></div>
-            </td>
 
-            <td id="content-well">{{outlet}}</td>
-        </tr>
-    </table>
+    <nav>
+        <ul id="nav-ul">
+            <li id="nav-snapshot" class="nav-li"><a {{action showSnapshot href=true}} class="gui-text-bold nav-item"><span class="nav-text">Snapshot</span></a></li>
+            <li id="nav-cluster" class="nav-li"><a {{action showCluster href=true}} class="gui-text-bold nav-item"><span class="nav-text">Cluster</span></a></li>
+            <li id="nav-ring" class="nav-li"><a {{action showRing href=true}} class="gui-text-bold nav-item"><span class="nav-text">Ring</span></a></li>
+            <li id="nav-objects" class="nav-li-disabled"><a class="gui-text-bold nav-item"><span class="nav-text">Objects</span></a></li>
+            <li id="nav-mapreduce" class="nav-li-disabled"><a class="gui-text-bold nav-item"><span class="nav-text">MapReduce</span></a></li>
+            <li id="nav-graphs" class="nav-li-disabled"><a class="gui-text-bold nav-item"><span class="nav-text">Graphs</span></a></li>
+            <li id="nav-logs" class="nav-li-disabled"><a class="gui-text-bold nav-item"><span class="nav-text">Logs</span></a></li>
+            <li id="nav-support" class="nav-li-disabled"><a class="gui-text-bold nav-item"><span class="nav-text">Support</span></a></li>
+        </ul>
+        <div id="active-nav"></div>
+        <div id="split-bar"></div>
+    </nav>
+
+    <section id="content-well">{{outlet}}</section>
+
 </div><!-- #wrapper -->
 
 <div id="tooltips" class="hide">
