--- a/priv/admin/js/templates/partition_filter.hbs
+++ b/priv/admin/js/templates/partition_filter.hbs
@@ -3,6 +3,6 @@
     <div class="gui-dropdown-wrapper">
         <div class="gui-dropdown-bg gui-text smaller"></div>
         <div class="gui-dropdown-cap left"></div>
-        {{view RiakControl.PartitionFilterSelectView id="filter" classNames="gui-dropdown" contentBinding="filters" optionLabelPath="content.name" optionValuePath="content.value" prompt="All"}}
+        {{view RiakControl.PartitionFilterSelectView id="filter" classNames="gui-dropdown" contentBinding="filters" optionLabelPath="content.name" optionValuePath="content.value" prompt="All" valueBinding="controller.selectedPartitionFilter.value"}}
     </div>
 </div>
