--- a/priv/admin/css/style.css
+++ b/priv/admin/css/style.css
@@ -67,7 +67,7 @@ body {
     padding: 8px 0 0 0;
 }
 
-a { text-decoration: none; }
+a { text-decoration: none; color: #DFDFDF; }
 a:visited { color: #DFDFDF; }
 
 h1 {
