--- a/priv/admin/css/style.css
+++ b/priv/admin/css/style.css
@@ -819,6 +819,7 @@ ul.bulleted li {
 .pagination {
     text-align: center;
     font-size: 12px;
+    cursor:pointer;
 }
 .pagination-bottom {
     margin-bottom: 36px;
