--- a/priv/admin/js/templates/pagination_item.hbs
+++ b/priv/admin/js/templates/pagination_item.hbs
@@ -1,3 +1,3 @@
 {{#with view}}
-  <span {{bindAttr class="spanClasses isActive:active"}}><a {{action paginateRing content href=true}}>{{content.page_id}}</a></span>
+  <span {{bindAttr class="spanClasses isActive:active"}} {{action paginateRing content href=true}}>{{content.page_id}}</span>
 {{/with}}
