Reorganize files and add jsdoc.

--- a/priv/admin/js/templates/pagination_item.hbs
+++ b/priv/admin/js/templates/pagination_item.hbs
@@ -1,3 +1,5 @@
 {{#with view}}
-<span {{bindAttr class="spanClasses isActive:active"}} {{action paginateRing content href=true}}>{{content.page_id}}</span>
+<a {{action paginateRing content href=true}}>
+  <span {{bindAttr class="spanClasses isActive:active"}}>{{content.page_id}}</span>
+</a>
 {{/with}}
